Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-33049

Qt6-creator gets stuck while debugging

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • Qt Creator 17.0.0
    • Qt Creator 16.0.2
    • Debugger
    • None
    • Linux/Wayland
    • 1de4e638b (17.0)

    Description

      When I am debugging, the whole qt6-creator gets stuck.

      (gdb) info threads
      Id Target Id Frame
      
      1 Thread 0x7f6a5c4e6b80 (LWP 47834) "qtcreator" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      2 Thread 0x7f68e5a866c0 (LWP 48442) "QThread" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      3 Thread 0x7f69be5fd6c0 (LWP 48340) "Thread (pooled)" malloc_consolidate (av=av@entry=0x7f69cc000030) at malloc.c:4907
      4 Thread 0x7f69477fe6c0 (LWP 48326) "Thread (pooled)" futex_wait (futex_word=0x7f69cc000030, expected=2, private=0) at ../sysdeps/nptl/futex-internal.h:146
      5 Thread 0x7f69457fa6c0 (LWP 48324) "Thread (pooled)" futex_wait (futex_word=0x7f69cc000030, expected=2, private=0) at ../sysdeps/nptl/futex-internal.h:146
      6 Thread 0x7f6980ff96c0 (LWP 48322) "Thread (pooled)" futex_wait (futex_word=0x7f69cc000030, expected=2, private=0) at ../sysdeps/nptl/futex-internal.h:146
      7 Thread 0x7f696affd6c0 (LWP 48313) "Thread (pooled)" futex_wait (futex_word=0x7f69cc000030, expected=2, private=0) at ../sysdeps/nptl/futex-internal.h:146
      8 Thread 0x7f6925ffb6c0 (LWP 48308) "Thread (pooled)" futex_wait (futex_word=0x7f69cc000030, expected=2, private=0) at ../sysdeps/nptl/futex-internal.h:146
      9 Thread 0x7f69467fc6c0 (LWP 48304) "Thread (pooled)" futex_wait (futex_word=0x7f69cc000030, expected=2, private=0) at ../sysdeps/nptl/futex-internal.h:146
      10 Thread 0x7f6981ffb6c0 (LWP 48302) "Thread (pooled)" futex_wait (futex_word=0x7f69cc000030, expected=2, private=0) at ../sysdeps/nptl/futex-internal.h:146
      11 Thread 0x7f68e4a846c0 (LWP 48059) "QThread" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      12 Thread 0x7f68d6ffd6c0 (LWP 48002) "QThread" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      13 Thread 0x7f69c5ffb6c0 (LWP 47881) "DesktopFilePath" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      14 Thread 0x7f69c67fc6c0 (LWP 47880) "QThread" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      15 Thread 0x7f6a21ffb6c0 (LWP 47861) "qtcreator:gl0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      16 Thread 0x7f6a227fc6c0 (LWP 47860) "qtcreato:gdrv0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      17 Thread 0x7f6a22ffd6c0 (LWP 47859) "qtcrea:traceq0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      18 Thread 0x7f6a237fe6c0 (LWP 47858) "qtcreator:gl0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      19 Thread 0x7f6a23fff6c0 (LWP 47857) "qtcreato:gdrv0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      20 Thread 0x7f6a38bf96c0 (LWP 47856) "qtcrea:traceq0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      21 Thread 0x7f6a393fa6c0 (LWP 47847) "qtcrea:traceq0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      22 Thread 0x7f6a39bfb6c0 (LWP 47846) "qtcrea:traceq0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      23 Thread 0x7f6a3a3fc6c0 (LWP 47845) "qtcrea:traceq0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      24 Thread 0x7f6a3abfd6c0 (LWP 47844) "qtcrea:sh_opt0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      25 Thread 0x7f6a3b3fe6c0 (LWP 47843) "qtcreator:sh0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      26 Thread 0x7f6a3bbff6c0 (LWP 47842) "qtcreat:disk$0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      27 Thread 0x7f6a50dff6c0 (LWP 47841) "qtcreator:cs0" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      28 Thread 0x7f6a53fff6c0 (LWP 47840) "WaylandEventThr" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      29 Thread 0x7f6a58f026c0 (LWP 47839) "WaylandEventThr" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      30 Thread 0x7f6a5c0886c0 (LWP 47838) "QDBusConnection" __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56

       

      (gdb) where 15
      #0 __syscall_cancel_arch () at ../sysdeps/unix/sysv/linux/x86_64/syscall_cancel.S:56
      #1 0x00007f6a5ea9581c in __internal_syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=a3@entry=0, a4=a4@entry=0, a5=a5@entry=0, a6=a6@entry=0, nr=0)
      at cancellation.c:49
      #2 0x00007f6a5ea95871 in __syscall_cancel (a1=<optimized out>, a2=<optimized out>, a3=a3@entry=0, a4=a4@entry=0, a5=a5@entry=0, a6=a6@entry=0, nr=0)
      at cancellation.c:75
      #3 0x00007f6a5eb0fdca in _GI__libc_read (fd=<optimized out>, buf=<optimized out>, nbytes=nbytes@entry=0) at ../sysdeps/unix/sysv/linux/read.c:26
      #4 0x00007f6a0ce842b1 in read (__fd=<optimized out>, __buf=<optimized out>, __nbytes=0) at /usr/include/bits/unistd.h:32
      #5 Debugger::Internal::OutputCollector::bytesAvailable (this=this@entry=0x55dfb3ea9090)
      at /usr/src/debug/qt-creator-opensource-src-16.0.2/src/plugins/debugger/outputcollector.cpp:145
      #6 0x00007f6a0ce843ab in Debugger::Internal::OutputCollector::shutdown (this=0x55dfb3ea9090)
      at /usr/src/debug/qt-creator-opensource-src-16.0.2/src/plugins/debugger/outputcollector.cpp:92
      #7 0x00007f6a0ce844a7 in Debugger::Internal::OutputCollector::~OutputCollector (this=0x55dfb3ea9090, __in_chrg=<optimized out>)
      at /usr/src/debug/qt-creator-opensource-src-16.0.2/src/plugins/debugger/outputcollector.cpp:39
      #8 0x00007f6a0ce447ae in Debugger::Internal::GdbEngine::~GdbEngine (this=0x55dfb3ea8e90, __in_chrg=<optimized out>)
      at /usr/src/debug/qt-creator-opensource-src-16.0.2/src/plugins/debugger/gdb/gdbengine.cpp:170
      #9 0x00007f6a0ce44c89 in Debugger::Internal::GdbEngine::~GdbEngine (this=0x55dfb3ea8e90, __in_chrg=<optimized out>)
      at /usr/src/debug/qt-creator-opensource-src-16.0.2/src/plugins/debugger/gdb/gdbengine.cpp:170
      #10 0x00007f6a0cdf07ee in qDeleteAll<QList<QPointer<Debugger::Internal::DebuggerEngine> >::const_iterator> (begin=..., end=...)
      at /usr/include/qt6/QtCore/qalgorithms.h:27
      #11 qDeleteAll<QList<QPointer<Debugger::Internal::DebuggerEngine> > > (c=...) at /usr/include/qt6/QtCore/qalgorithms.h:35
      #12 Debugger::DebuggerRunTool::~DebuggerRunTool (this=0x55dfb432ad00, __in_chrg=<optimized out>)
      at /usr/src/debug/qt-creator-opensource-src-16.0.2/src/plugins/debugger/debuggerruncontrol.cpp:533
      #13 0x00007f6a0cdf0b69 in Debugger::DebuggerRunTool::~DebuggerRunTool (this=0x55dfb432ad00, __in_chrg=<optimized out>)
      at /usr/src/debug/qt-creator-opensource-src-16.0.2/src/plugins/debugger/debuggerruncontrol.cpp:537
      #14 0x00007f6a20aaab3e in qDeleteAll<QList<QPointer<ProjectExplorer::RunWorker> >::const_iterator> (begin=..., end=...) at /usr/include/qt6/QtCore/qalgorithms.h:27

      It waits for reading from m_serverFd, which is 0/dev/pts/19 – I assume gdb?

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-33049
        # Subject Branch Project Status CR V

        Activity

          People

            hjk hjk
            jirislaby Jiri Slaby
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes