Debugger: Pass unsigned int * instead of size_t * to ioctl(..., FIONREAD, ...)

While the documention for FIONREAD e.g. on [1] mentions a (signed) int *,
the actual implementation [2] on Linux uses an unsigned int *.

[1] https://man7.org/linux/man-pages/man2/FIONREAD.2const.html
[2] https://github.com/torvalds/linux/blob/f09079bd04a924c72d555cd97942d5f8d7eca98c/drivers/tty/n_tty.c#L2507

Done-by: Jiri Slaby
Fixes: QTCREATORBUG-33049
Change-Id: I020242ff43c5b0c6b206edb7d9cd227680456769
Reviewed-by: Christian Stenger <christian.stenger@qt.io>