src/plugins/debugger/outputcollector.cpp
@@ -138,8 +138,10 @@ void OutputCollector::bytesAvailable()
     if (m_socket)
         emit byteDelivery(m_socket->readAll());
 #else
-    size_t nbytes = 0;
+    unsigned int nbytes = 0;
     if (::ioctl(m_serverFd, FIONREAD, (char *) &nbytes) < 0)
+        return;
+    if (!nbytes)
         return;
     QVarLengthArray<char, 8192> buff(nbytes);
     if (::read(m_serverFd, buff.data(), nbytes) != (int)nbytes)
